# uberspark

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  COPYING.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  RELEASE
.github/workflows/: ci-build.yaml
build-trusses/: Makefile-truss-x86_64.Dockerfile  Makefile.in  build-amd64.Dockerfile  build-bridge-plugins.mk  build-commonmods.mk  build-docs.mk  build-frontend.mk  build-libs.mk  build-vbridge-plugin.mk  build-x86_64-alpine.Dockerfile  build-x86_64.Dockerfile  commondefs.mk  configpp.mk  configure.ac  docker-entrypoint.sh  install.mk  sdefpp.mk
build-trusses/vault/: build-x86_64.Dockerfile  build-x86_64.Dockerfile.alpine  docker-entrypoint.sh  docker-entrypoint.sh.alpine
docs/: Makefile  build-install.md  build-install.rst  conf.py  index.rst  macros.hrst  macros.rst  sw-requirements.md  sw-requirements.rst  toc.md  toc.rst  verify-build-install-libs.md  verify-build-install-libs.rst
docs/_build/: sphinxhighlight.sty  uberspark.aux  uberspark.fdb_latexmk  uberspark.fls  uberspark.ilg  uberspark.out  uberspark.tex  uberspark.toc
docs/nextgen-toolkit/: build-install.rst  intro.rst  preface.rst  sw-requirements.rst
src/: Makefile.in  configure.ac  uberspark-common.mk.in
src-exptoolchain/: README.rst  configure.ac  uberspark-common.mk.in
src-exptoolchain/include/: usbinformat.h  usconfig.h
src-exptoolchain/tools/: Makefile
src-nextgen/bridges/: README.rst
src-nextgen/config/: uberspark-constdefs-mf.json  uberspark.json
src-nextgen/hwm/: README.rst
src-nextgen/include/: basedefs.h.us  binformat.h.us  uberspark.h  usbinformat.h
src-nextgen/sdefs/: README.rst  basedefs.json  binformat.json  template.json
src-nextgen/uobjrtl/: Doxyfile  README.rst
src/experimental-toolchain/: Makefile-truss-x86_64.Dockerfile  Makefile.in  README.md  README.rst  configure.ac  uberspark-common.mk.in  ubersparkbuild.Dockerfile
src/hwm/: xmhfhwm_bios.c  xmhfhwm_cpu.c  xmhfhwm_e1000.c  xmhfhwm_lapic.c  xmhfhwm_mem.c  xmhfhwm_txt.c  xmhfhwm_vtd.c
src/include/: uberspark-config.h  uberspark.h  usbinformat.h  usconfig.h
src/libs/: Makefile.in
src/loaders/: Makefile  README.md
src/sentinels/: README.md  libsentinel-call-generic-generic-x86_32.S  sentinel-call-generic-generic-x86_32.S
src/tools/: Makefile  ubersparkconfig.ml.in
uberspark/: Makefile.in  uberspark-common.mk.in
uberspark/include/: uberspark.h
(+931 files in other folders)
